Reorganized TOC for consistency.

--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -12524,59 +12524,111 @@ items:
       - name: Overview
         href: resources/sharepoint.md
       - name: Sites
-        href: resources/site.md
         items:
+        - name: Site
+          href: resources/site.md
         - name: Get site
           href: api/site-get.md
-        - name: Get lists
-          href: api/list-list.md
-        - name: List subsites
-          href: api/site-list-subsites.md
         - name: Get site analytics
           href: api/itemanalytics-get.md
         - name: Get activities by interval
           href: api/itemactivity-getbyinterval.md
-        - name: List columns
-          href: api/site-list-columns.md
-        - name: Create column
-          href: api/site-post-columns.md
         - name: Follow site
           href: api/site-follow.md
         - name: Unfollow site
           href: api/site-unfollow.md
         - name: List followed sites
           href: api/sites-list-followed.md
+        - name: List columns
+          href: api/site-list-columns.md
+        - name: Create columnDefinition
+          href: api/site-post-columns.md
+        - name: List content types
+          href: api/site-list-contenttypes.md
+        - name: Create content type
+          href: api/site-post-contenttypes.md
         - name: Get applicable content types for list
           href: api/site-getapplicablecontenttypesforlist.md
+        - name: Get lists
+          href: api/list-list.md
+        - name: Create list
+          href: api/list-create.md
+        - name: List subsites
+          href: api/site-list-subsites.md
         - name: Permissions
-          href: resources/permission.md
           items:
-          - name: Get site permission
-            href: api/site-get-permission.md
+          - name: Permission
+            href: resources/permission.md
           - name: List site permissions
             href: api/site-list-permissions.md 
           - name: Create site permissions
             href: api/site-post-permissions.md
+          - name: Get site permission
+            href: api/site-get-permission.md
           - name: Update site permission
             href: api/site-update-permission.md
           - name: Delete site permission
             href: api/site-delete-permission.md
       - name: Lists
-        href: resources/list.md
         items:
+        - name: List
+          href: resources/list.md
+        - name: Get lists in a site
+          href: api/list-list.md
+        - name: Create list
+          href: api/list-create.md
         - name: Get list
           href: api/list-get.md
         - name: Get items
           href: api/listitem-list.md
-        - name: Create list
-          href: api/list-create.md
         - name: List columns
           href: api/list-list-columns.md
-        - name: Create column
+        - name: Create columnDefinition
           href: api/list-post-columns.md
-      - name: List items
-        href: resources/listitem.md
+        - name: List content types
+          href: api/list-list-contenttypes.md
+        - name: Add copy of content type
+          href: api/contenttype-addcopy.md
+      - name: Columns
         items:
+        - name: Column definition
+          href: resources/columndefinition.md
+        - name: Get
+          href: api/columndefinition-get.md
+        - name: Update
+          href: api/columndefinition-update.md
+        - name: Delete
+          href: api/columndefinition-delete.md
+      - name: Content types
+        items:
+        - name: Content type
+          href: resources/contentType.md
+        - name: Get
+          href: api/contenttype-get.md
+        - name: Update
+          href: api/contenttype-update.md
+        - name: Delete
+          href: api/contenttype-delete.md
+        - name: IsPublished
+          href: api/contenttype-ispublished.md
+        - name: Publish
+          href: api/contenttype-publish.md
+        - name: Unpublish
+          href: api/contenttype-unpublish.md
+        - name: Add copy to list
+          href: api/contenttype-addcopy.md
+        - name: Associate with hub sites
+          href: api/contenttype-associatewithhubsites.md
+        - name: Copy to default content location
+          href: api/contenttype-copytodefaultcontentlocation.md
+        - name: List columns
+          href: api/contenttype-list-columns.md
+        - name: Create columnDefinition
+          href: api/contenttype-post-columns.md
+      - name: List items
+        items:
+        - name: List item
+          href: resources/listitem.md
         - name: Get item
           href: api/listitem-get.md
         - name: Create item
@@ -12591,55 +12643,19 @@ items:
           href: api/itemanalytics-get.md
         - name: Get activities by interval
           href: api/itemactivity-getbyinterval.md
-      - name: Content types
-        href: resources/contentType.md
-        items:
-        - name: List content types in a site
-          href: api/site-list-contenttypes.md
-        - name: List content types in a list
-          href: api/list-list-contenttypes.md
-        - name: Create a site content type
-          href: api/site-post-contenttypes.md
-        - name: Get
-          href: api/contenttype-get.md
-        - name: Update
-          href: api/contenttype-update.md
-        - name: Delete
-          href: api/contenttype-delete.md
-        - name: Publish
-          href: api/contenttype-publish.md
-        - name: Unpublish
-          href: api/contenttype-unpublish.md
-        - name: IsPublished
-          href: api/contenttype-ispublished.md
-        - name: Add copy
-          href: api/contenttype-addcopy.md
-        - name: Copy to default content location
-          href: api/contenttype-copytodefaultcontentlocation.md
-        - name: Associate with hub sites
-          href: api/contenttype-associatewithhubsites.md
-        - name: List content type columns
-          href: api/contenttype-list-columns.md
-        - name: Create content type column
-          href: api/contenttype-post-columns.md
-        - name: Get column definition
-          href: api/columndefinition-get.md
-        - name: Update column definition
-          href: api/columndefinition-update.md
-        - name: Delete column definition
-          href: api/columndefinition-delete.md
       - name: Pages
-        href: resources/sitepage.md
         items:
-        - name: List pages
+        - name: Site page
+          href: resources/sitepage.md
+        - name: List
           href: api/sitepage-list.md
-        - name: Get page
+        - name: Get
           href: api/sitepage-get.md
-        - name: Create page
+        - name: Create
           href: api/sitepage-create.md
-        - name: Delete page
+        - name: Delete
           href: api/sitepage-delete.md
-        - name: Publish page
+        - name: Publish
           href: api/sitepage-publish.md
       - name: Taxonomy (preview)
         displayname: Taxonomy API
