--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -8,7 +8,6 @@ items:
       href: /graph/auth/index?context=graph/api/beta
     - name: Basics
       href: /graph/auth/auth-concepts?context=graph/api/beta
-    - name: Register your app
       href: /graph/auth-register-app-v2?context=graph/api/beta
     - name: Get access on behalf of a user
       href: /graph/auth-v2-user?context=graph/api/beta
@@ -1851,7 +1850,7 @@ items:
             href: api/print-get-settings.md
           - name: Update
             href: api/print-update-settings.md
-      - name: Corprate management
+      - name: Corporate management
         href: resources/intune-graph-overview.md
         displayName: Intune
         items:
