--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -4055,8 +4055,11 @@ items:
       - name: Identity and sign-in
         items:
         - name: Authentication methods
-          href: resources/authenticationmethods-overview.md
           items:
+          - name: Overview
+            href: resources/authenticationmethods-overview.md
+          - name: List all methods
+            href: api/authentication-list-methods.md
           - name: FIDO2 security keys
             href: resources/fido2authenticationmethod.md
             items:
