--- a/changelog/Microsoft.Office.Tasks.json
+++ b/changelog/Microsoft.Office.Tasks.json
@@ -8,7 +8,7 @@
           "ChangedApiName": "Tasks.Read",
           "ChangeType": "Addition",
           "Description": "Added support for delegated permission of `Tasks.Read` to the read operations of all Planner resources.",
-          "Target": "Planner API,plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat, plannerRoster,plannerRosterMember"
+          "Target": "plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat, plannerRoster,plannerRosterMember"
         },
         {
           "Id": "6aa8d44e-1415-43ef-b71f-c680382941ea",
@@ -16,7 +16,7 @@
           "ChangedApiName": "Tasks.ReadWrite",
           "ChangeType": "Addition",
           "Description": "Added support for delegated permission of `Tasks.ReadWrite` to the read and write operations of all Planner resources.",
-          "Target": "Planner API,plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat, plannerRoster,plannerRosterMember"
+          "Target": "plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat, plannerRoster,plannerRosterMember"
         }
       ],
       "Id": "6aa8d44e-1415-43ef-b71f-c680382941ea",
