--- a/changelog/Microsoft.Office.Tasks.json
+++ b/changelog/Microsoft.Office.Tasks.json
@@ -34,7 +34,7 @@
           "ChangedApiName": "Tasks.Read",
           "ChangeType": "Addition",
           "Description": "Added support for delegated permission of `Tasks.Read` to the read operations of all Planner resources.",
-          "Target": "Planner API,plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat"
+          "Target": "plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat"
         },
         {
           "Id": "79526dea-b980-4116-9a6a-81e1ea644efa",
@@ -42,7 +42,7 @@
           "ChangedApiName": "Tasks.ReadWrite",
           "ChangeType": "Addition",
           "Description": "Added support for delegated permission of `Tasks.ReadWrite` to the read and write operations of all Planner resources.",
-          "Target": "Planner API,plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat"
+          "Target": "plannerPlan,plannerTask,plannerPlanDetails,plannerTaskDetails,plannerBucket,plannerAssignedToTaskBoardTaskFormat,plannerBucketTaskBoardTaskFormat,plannerProgressTaskBoardTaskFormat"
         }
       ],
       "Id": "79526dea-b980-4116-9a6a-81e1ea644efa",
