--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -231,7 +231,7 @@ items:
                     href: accessreviews-overview.md
                   - name: Review access to a security group
                     href: tutorial-accessreviews-securitygroup.md
-                  - name: Review access to an M365 group
+                  - name: Review access to a Microsoft 365 group
                     href: tutorial-accessreviews-M365group.md
       - name: Mail
         displayName: Outlook, Outlook mail
