--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -13087,7 +13087,7 @@ items:
         - name: Reply to message
           href: api/chatmessage-post-replies.md
         - name: Get messages across all channels
-          href: api/channels-getallmessages.md  
+          href: api/channel-getallmessages.md  
       - name: Chat
         href: resources/chat.md
         items:
@@ -13111,6 +13111,8 @@ items:
           href: api/chat-list-messages.md
         - name: Get message in chat
           href: api/chatmessage-get.md
+        - name: Get messages across all chats
+          href: api/chats-getallmessages.md 
         - name: Send message in chat
           href: api/chat-post-messages.md
         - name: Get chat between user and app 
@@ -13120,7 +13122,7 @@ items:
         items:
         - name: List channel messages
           href: api/channel-list-messages.md
-        - name: Get channel messages delta
+        - name: List channel messages delta
           href: api/chatmessage-delta.md
         - name: List message replies
           href: api/chatmessage-list-replies.md
