--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -4374,6 +4374,92 @@ items:
               href: api/identitysecuritydefaultsenforcementpolicy-get.md
             - name: Update
               href: api/identitysecuritydefaultsenforcementpolicy-update.md
+        - name: User flows
+          items:  
+          - name: Self-service sign up user flows
+            items:
+             - name: Self-service sign up user flow
+               href: resources/b2xidentityuserflow.md
+             - name: List
+               href: api/identitycontainer-list-b2xuserflows.md
+             - name: Create
+               href: api/identitycontainer-post-b2xuserflows.md
+             - name: Get
+               href: api/b2xidentityuserflow-get.md
+             - name: Delete
+               href: api/b2xidentityuserflow-delete.md
+             - name: List identity providers
+               href: api/b2xidentityuserflow-list-identityproviders.md
+             - name: Add identity provider
+               href: api/b2xidentityuserflow-post-identityproviders.md
+             - name: Remove identity provider
+               href: api/b2xidentityuserflow-delete-identityproviders.md
+             - name: List user attribute assignments
+               href: api/b2xidentityuserflow-list-userattributeassignments.md
+             - name: Create user attribute assignment
+               href: api/b2xidentityuserflow-post-userattributeassignments.md
+             - name: List languages
+               href: api/b2xidentityuserflow-list-languages.md
+             - name: Get API connectors configuration
+               href: api/b2xidentityuserflow-get-apiConnectorConfiguration.md
+             - name: Configure an API connector
+               href: api/b2xidentityuserflow-put-apiConnectorConfiguration.md
+          - name: User flow attributes
+            items:
+             - name: User flow attribute
+               href: resources/identityuserflowattribute.md
+             - name: List
+               href: api/identityuserflowattribute-list.md
+             - name: Create
+               href: api/identityuserflowattribute-post.md
+             - name: Get
+               href: api/identityuserflowattribute-get.md
+             - name: Update
+               href: api/identityuserflowattribute-update.md
+             - name: Delete
+               href: api/identityuserflowattribute-delete.md
+          - name: User flow attribute assignment
+            items:
+             - name: User flow attribute assignment
+               href: resources/identityuserflowattributeassignment.md
+             - name: Get user flow attribute assignment
+               href: api/identityuserflowattributeassignment-get.md
+             - name: Update user flow attribute assignment
+               href: api/identityuserflowattributeassignment-update.md
+             - name: Delete user flow attribute assignment
+               href: api/identityuserflowattributeassignment-delete.md
+          - name: User flow language configuration
+            items:
+             - name: User flow language configuration
+               href: resources/userflowlanguageconfiguration.md
+             - name: Get userFlowLanguageConfiguration
+               href: api/userflowlanguageconfiguration-get.md
+             - name: List defaultPages
+               href: api/userflowlanguageconfiguration-list-defaultpages.md
+             - name: List overridesPages
+               href: api/userflowlanguageconfiguration-list-overridespages.md
+             - name: User flow language page
+               href: resources/userflowlanguagepage.md
+             - name: Get userFlowLanguagePage
+               href: api/userflowlanguagepage-get.md
+             - name: Update userFlowLanguagePage
+               href: api/userflowlanguagepage-put.md
+             - name: Delete userFlowLanguagePage
+               href: api/userflowlanguagepage-delete.md
+          - name: API connectors
+            items:
+            - name: API connector
+              href: resources/identityapiconnector.md
+            - name: List
+              href: api/identityapiconnector-list.md
+            - name: Create
+              href: api/identityapiconnector-create.md
+            - name: Get
+              href: api/identityapiconnector-get.md
+            - name: Update
+              href: api/identityapiconnector-update.md
+            - name: Delete
+              href: api/identityapiconnector-delete.md
     - name: Governance
       items:
         - name: Terms of use
