Filled in doc gaps
Added docs for built-in and custom user flow attribute resources in both beta and v1.0. Detailed change log to include enums, operations, and new resource files.

--- a/api-reference/v1.0/toc.yml
+++ b/api-reference/v1.0/toc.yml
@@ -4054,6 +4054,14 @@ items:
               href: api/subscribedsku-get.md
       - name: Identity and sign-in
         items:
+        - name: Authentication flows policy
+          items:
+          - name: Authentication flows policy
+            href: resources/authenticationflowspolicy.md
+          - name: Get
+            href: api/authenticationflowspolicy-get.md
+          - name: Update
+            href: api/authenticationflowspolicy-update.md
         - name: Authentication methods
           items:
           - name: Overview
