--- a/api-reference/beta/toc.yml
+++ b/api-reference/beta/toc.yml
@@ -10230,26 +10230,24 @@ items:
             href: api/mobiledevicemanagementpolicies-get.md
           - name: Update mobile device management policy
             href: api/mobiledevicemanagementpolicies-update.md
-            items:
-            - name: List included groups
-              href: api/mobiledevicemanagementpolicies-list-includedgroups.md
-            - name: Add included groups
-              href: api/mobiledevicemanagementpolicies-post-includedgroups.md
-            - name: Remove included groups
-              href: api/mobiledevicemanagementpolicies-delete-includedgroups.md
+          - name: List included groups for mobile device management policy
+            href: api/mobiledevicemanagementpolicies-list-includedgroups.md
+          - name: Add included groups for mobile device management policy
+            href: api/mobiledevicemanagementpolicies-post-includedgroups.md
+          - name: Remove included groups for mobile device management policy
+            href: api/mobiledevicemanagementpolicies-delete-includedgroups.md
           - name: List mobile app management policies
             href: api/mobileappmanagementpolicies-list.md
           - name: Get mobile app management policy
             href: api/mobileappmanagementpolicies-get.md
           - name: Update mobile app management policy
             href: api/mobileappmanagementpolicies-update.md
-            items:
-            - name: List included groups
-              href: api/mobileappmanagementpolicies-list-includedgroups.md
-            - name: Add included groups
-              href: api/mobileappmanagementpolicies-post-includedgroups.md
-            - name: Remove included groups
-              href: api/mobileappmanagementpolicies-delete-includedgroups.md
+          - name: List included groups for mobile app management policy
+            href: api/mobileappmanagementpolicies-list-includedgroups.md
+          - name: Add included groups for mobile app management policy
+            href: api/mobileappmanagementpolicies-post-includedgroups.md
+          - name: Remove included groups for mobile app management policy
+            href: api/mobileappmanagementpolicies-delete-includedgroups.md
         - name: Role management
           href: resources/rolemanagement.md
           items:
