--- a/concepts/toc.yml
+++ b/concepts/toc.yml
@@ -585,6 +585,8 @@ items:
                 href: toolkit/providers/providers.md
               - name: MSAL provider
                 href: toolkit/providers/msal.md
+              - name: MSAL 2.0 provider
+                href: toolkit/providers/msal2.md
               - name: SharePoint provider
                 href: toolkit/providers/sharepoint.md
               - name: Microsoft Teams provider
